mapping of index.html

--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="CSS/main.css">
+    <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Open+Sans:wght@800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -142,7 +142,7 @@ Stay fit, stay happy!
 function googleTranslateElementInit() {
 new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
 }
-</script> 
+</script>
 <div class="footer-dark">
   <footer>
       <div class="container">
@@ -161,16 +161,16 @@ new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_el
               <div class="col-sm-6 col-md-3 item">
                   <h3>About</h3>
                   <ul>
-                      <li><a href="main.html">Company</a></li>
+                      <li><a href="index.html">Company</a></li>
                       <li><a href="#">Team</a></li>
-                     
+
                   </ul>
               </div>
               <div class="col-md-6 item text">
                   <h3>NurseiRaTor</h3>
                   <p>We bridge the gap between You and Healthcare Specialists.</p>
               </div>
-              
+
           </div>
           <p class="copyright">NurseiRaTor © 2020</p>
       </div>
